feat: create viewing party functionality

--- a/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Movies_Results_Page_9/filling_search_and_clicking_search_takes_user_to_movies_result_page.yml
+++ b/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Movies_Results_Page_9/filling_search_and_clicking_search_takes_user_to_movies_result_page.yml
@@ -46,15 +46,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 b2e880ac67c1fba390623b9fc04bd63a.cloudfront.net (CloudFront)
+      - 1.1 21d788b44c2b3d335a275c07a54548b6.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - 9cWxqpByhzoPvvO8i688F16n7FT2YWej3CLsgG9jJqt0J9h6FXmtgA==
+      - a_CKel7OXydPzdkRKue-BkglMcgJl8fbXvmpSR40USbSXwOKc9l4Ww==
       Age:
-      - '1331'
+      - '5343'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","genre_ids":[35,80],"id":100,"original_language":"en","original_title":"Lock,
@@ -68,5 +68,5 @@ http_interactions:
         Ritchie. Interviews were conducted with Nick Moran, Jason Flemyng, Dexter
         Fletcher and Jason Statham.","popularity":0.6,"poster_path":null,"release_date":"2005-01-01","title":"The
         Making of Lock, Stock, and Two Smoking Barrels","video":false,"vote_average":0.0,"vote_count":0}],"total_pages":1,"total_results":2}'
-  recorded_at: Wed, 10 May 2023 23:08:37 GMT
+  recorded_at: Thu, 11 May 2023 00:15:29 GMT
 recorded_with: VCR 6.1.0
