--- a/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Movies_Results_Page_9/displays_title_vote_average_for_first_20_movie.yml
+++ b/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Movies_Results_Page_9/displays_title_vote_average_for_first_20_movie.yml
@@ -46,15 +46,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 48ea53c7edffa2cdbdc32f7d94966344.cloudfront.net (CloudFront)
+      - 1.1 56a79b3a2ac1e2942686c2337f96fb72.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - xetQFCRShcj8AXWN_Htou0bBHa5TuWBmuPlxijXlQxe3ba4rtU_RVA==
+      - Hzt9Skkv03RpmjMA3Oiu2rQ6R_6ePBVaCXQj66-jJsd_QOogmQc8FA==
       Age:
-      - '1349'
+      - '5344'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","genre_ids":[35,80],"id":100,"original_language":"en","original_title":"Lock,
@@ -68,5 +68,5 @@ http_interactions:
         Ritchie. Interviews were conducted with Nick Moran, Jason Flemyng, Dexter
         Fletcher and Jason Statham.","popularity":0.6,"poster_path":null,"release_date":"2005-01-01","title":"The
         Making of Lock, Stock, and Two Smoking Barrels","video":false,"vote_average":0.0,"vote_count":0}],"total_pages":1,"total_results":2}'
-  recorded_at: Wed, 10 May 2023 23:08:55 GMT
+  recorded_at: Thu, 11 May 2023 00:15:29 GMT
 recorded_with: VCR 6.1.0
