--- a/spec/fixtures/vcr_cassettes/MovieService/class_methods/movies/returns_movie_data.yml
+++ b/spec/fixtures/vcr_cassettes/MovieService/class_methods/movies/returns_movie_data.yml
@@ -46,15 +46,17 @@ http_interactions:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 a1fb8be6c85edc28c20536da81db5204.cloudfront.net (CloudFront)
+      - 1.1 dc50b0effd72a7b2c19bcb0909cfae82.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN52-P1
+      - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - bh_iWtkPT3JbjAunqXi4AAdbdCnPqEAixlXJvCxNkmRWejgI5IOuoQ==
+      - 1c7bezCEn_bMU2aJnRHyMWbejzBhBgN6pgMPlbSPvpiJeK2nNFmtXQ==
+      Age:
+      - '3765'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/5SwoNJ5o2dEOdABCHdqM4siMhqt.jpg","genre_ids":[35,18],"id":701189,"original_language":"en","original_title":"Query","overview":"A
@@ -68,5 +70,5 @@ http_interactions:
         of a murder charge. His death sentence is commuted to a long prison term.
         When released as an old man, he vows to find the real killer.","popularity":1.021,"poster_path":"/fl13KK3qG1ReCChHCU2qyai8oij.jpg","release_date":"1945-10-21","title":"Murder
         in Reverse?","video":false,"vote_average":6.0,"vote_count":2}],"total_pages":1,"total_results":3}'
-  recorded_at: Thu, 11 May 2023 00:04:06 GMT
+  recorded_at: Thu, 11 May 2023 01:06:51 GMT
 recorded_with: VCR 6.1.0
