--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@
 !/tmp/storage/.keep
 
 /public/assets
+/coverage
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore application configuration
+/config/application.yml
