feat: movie poster images

--- a/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Movies_Results_Page_9/filling_search_and_clicking_search_takes_user_to_movies_result_page.yml
+++ b/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Movies_Results_Page_9/filling_search_and_clicking_search_takes_user_to_movies_result_page.yml
@@ -25,48 +25,46 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Wed, 10 May 2023 22:46:26 GMT
+      - Thu, 11 May 2023 17:24:40 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=26478
+      - public, max-age=26334
       X-Memc:
-      - HIT
+      - MISS, STORE
       X-Memc-Key:
       - 129a0b8f8ce1c8689149f00e914aa3d0
       X-Memc-Age:
-      - '20299'
+      - '0'
       X-Memc-Expires:
-      - '6367'
+      - '26334'
       Etag:
-      - W/"ed0e1a0ced3d27ff0e69b80ef660eb5a"
+      - W/"6cb3953d69e6e11abd57ae4be0101889"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 21d788b44c2b3d335a275c07a54548b6.cloudfront.net (CloudFront)
+      - 1.1 b93403e5b15ed21bc6e80b8108e9d988.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - a_CKel7OXydPzdkRKue-BkglMcgJl8fbXvmpSR40USbSXwOKc9l4Ww==
-      Age:
-      - '5343'
+      - tlkZveYp8DbbNN4to8uqGEJ_5fBPvqPDJUFdKn6dlHLerm3wpD-h1A==
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","genre_ids":[35,80],"id":100,"original_language":"en","original_title":"Lock,
         Stock and Two Smoking Barrels","overview":"A card shark and his unwillingly-enlisted
         friends need to make a lot of cash quick after losing a sketchy poker match.
         To do this they decide to pull a heist on a small-time gang who happen to
-        be operating out of the flat next door.","popularity":9.361,"poster_path":"/8kSerJrhrJWKLk1LViesGcnrUPE.jpg","release_date":"1998-08-28","title":"Lock,
-        Stock and Two Smoking Barrels","video":false,"vote_average":8.133,"vote_count":5902},{"adult":false,"backdrop_path":null,"genre_ids":[],"id":660896,"original_language":"en","original_title":"The
+        be operating out of the flat next door.","popularity":11.328,"poster_path":"/8kSerJrhrJWKLk1LViesGcnrUPE.jpg","release_date":"1998-08-28","title":"Lock,
+        Stock and Two Smoking Barrels","video":false,"vote_average":8.133,"vote_count":5905},{"adult":false,"backdrop_path":null,"genre_ids":[],"id":660896,"original_language":"en","original_title":"The
         Making of Lock, Stock, and Two Smoking Barrels","overview":"Program about
         the film ''Lock Stock and Two Smoking Barrels'' directed and written by Guy
         Ritchie. Interviews were conducted with Nick Moran, Jason Flemyng, Dexter
         Fletcher and Jason Statham.","popularity":0.6,"poster_path":null,"release_date":"2005-01-01","title":"The
         Making of Lock, Stock, and Two Smoking Barrels","video":false,"vote_average":0.0,"vote_count":0}],"total_pages":1,"total_results":2}'
-  recorded_at: Thu, 11 May 2023 00:15:29 GMT
+  recorded_at: Thu, 11 May 2023 17:24:40 GMT
 recorded_with: VCR 6.1.0
