feaT: add viewingparty sad path

--- a/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Movies_Results_Page_9/displays_title_vote_average_for_first_20_movie.yml
+++ b/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Movies_Results_Page_9/displays_title_vote_average_for_first_20_movie.yml
@@ -46,15 +46,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 949f831c3bb70b840d7eecaeb220bbfa.cloudfront.net (CloudFront)
+      - 1.1 d29afc70fc2fdadee440493854714224.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN52-P3
+      - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - 5pQPQHDNQKcczJTS-_GlAWopN_QToJUC18bHy3tsfbeqNz6SHQ5_4Q==
+      - chP1oEjZXdflBz47sh7qzOatN-NPqRfGoQGABm-UJjE-RlzsnnMcxQ==
       Age:
-      - '1'
+      - '8592'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","genre_ids":[35,80],"id":100,"original_language":"en","original_title":"Lock,
@@ -68,5 +68,5 @@ http_interactions:
         Ritchie. Interviews were conducted with Nick Moran, Jason Flemyng, Dexter
         Fletcher and Jason Statham.","popularity":0.6,"poster_path":null,"release_date":"2005-01-01","title":"The
         Making of Lock, Stock, and Two Smoking Barrels","video":false,"vote_average":0.0,"vote_count":0}],"total_pages":1,"total_results":2}'
-  recorded_at: Thu, 11 May 2023 17:24:40 GMT
+  recorded_at: Thu, 11 May 2023 19:47:52 GMT
 recorded_with: VCR 6.1.0
