--- a/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Movies_Results_Page_9/filling_search_and_clicking_search_takes_user_to_movies_result_page.yml
+++ b/spec/fixtures/vcr_cassettes/Discover_Movies_Page/Movies_Results_Page_9/filling_search_and_clicking_search_takes_user_to_movies_result_page.yml
@@ -46,13 +46,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 b93403e5b15ed21bc6e80b8108e9d988.cloudfront.net (CloudFront)
+      - 1.1 9cefde3a3c84cc779d3c26a39c2e4430.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN52-P3
+      - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - tlkZveYp8DbbNN4to8uqGEJ_5fBPvqPDJUFdKn6dlHLerm3wpD-h1A==
+      - In87oeRyV2GU5SrZkwrUlVeMRhOKLDjgjm8XtEetYy6sC8k0fVMfQg==
+      Age:
+      - '8592'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","genre_ids":[35,80],"id":100,"original_language":"en","original_title":"Lock,
@@ -66,5 +68,5 @@ http_interactions:
         Ritchie. Interviews were conducted with Nick Moran, Jason Flemyng, Dexter
         Fletcher and Jason Statham.","popularity":0.6,"poster_path":null,"release_date":"2005-01-01","title":"The
         Making of Lock, Stock, and Two Smoking Barrels","video":false,"vote_average":0.0,"vote_count":0}],"total_pages":1,"total_results":2}'
-  recorded_at: Thu, 11 May 2023 17:24:40 GMT
+  recorded_at: Thu, 11 May 2023 19:47:52 GMT
 recorded_with: VCR 6.1.0
