--- a/spec/fixtures/vcr_cassettes/MovieFacade/find_movie/returns_the_movie_with_given_id.yml
+++ b/spec/fixtures/vcr_cassettes/MovieFacade/find_movie/returns_the_movie_with_given_id.yml
@@ -48,15 +48,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 c11dc3a4786e038ddffb5e925a892302.cloudfront.net (CloudFront)
+      - 1.1 48a6ccbb0ddb052ab512a3422295bd38.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN52-P3
+      - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - _F8l3uasTd8Mn9Berd2zILzjs0hw_CaVggDwFo4WnnsHO9bhz7ubkg==
+      - N9X-9wttk0rwPyMb9fTgqUFqkM9VKqZ8j4s_TBDnZjPLXzueeCbtPg==
       Age:
-      - '177'
+      - '6192'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/hZkgoQYus5vegHoetLkCJzb17zJ.jpg","belongs_to_collection":null,"budget":63000000,"genres":[{"id":18,"name":"Drama"},{"id":53,"name":"Thriller"},{"id":35,"name":"Comedy"}],"homepage":"http://www.foxmovies.com/movies/fight-club","id":550,"imdb_id":"tt0137523","original_language":"en","original_title":"Fight
@@ -73,5 +73,5 @@ http_interactions:
         Century Fox","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1999-10-15","revenue":100853753,"runtime":139,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Mischief.
         Mayhem. Soap.","title":"Fight Club","video":false,"vote_average":8.433,"vote_count":26372}'
-  recorded_at: Thu, 11 May 2023 20:25:13 GMT
+  recorded_at: Thu, 11 May 2023 22:05:28 GMT
 recorded_with: VCR 6.1.0
