--- a/spec/fixtures/vcr_cassettes/MovieService/class_methods/movies/returns_movie_data.yml
+++ b/spec/fixtures/vcr_cassettes/MovieService/class_methods/movies/returns_movie_data.yml
@@ -46,15 +46,17 @@ http_interactions:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 9cefde3a3c84cc779d3c26a39c2e4430.cloudfront.net (CloudFront)
+      - 1.1 045f1e1f031241f3808c557a2b5d6b0a.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - J3DFTZ_qBuCQLXXNjnuJ9SQFYwnMXJC97YHpTRQHmU16o3iH8WADSA==
+      - 0UN6Xy0CUQhMuIoNYDlA_jh5lgQUIMgmTKrlzbVRQFaU4rBT65LXgQ==
+      Age:
+      - '4832'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/5SwoNJ5o2dEOdABCHdqM4siMhqt.jpg","genre_ids":[35,18],"id":701189,"original_language":"en","original_title":"Query","overview":"A
@@ -68,5 +70,5 @@ http_interactions:
         of a murder charge. His death sentence is commuted to a long prison term.
         When released as an old man, he vows to find the real killer.","popularity":1.214,"poster_path":"/fl13KK3qG1ReCChHCU2qyai8oij.jpg","release_date":"1945-10-21","title":"Murder
         in Reverse?","video":false,"vote_average":6.0,"vote_count":2}],"total_pages":1,"total_results":3}'
-  recorded_at: Thu, 11 May 2023 22:05:31 GMT
+  recorded_at: Thu, 11 May 2023 23:26:03 GMT
 recorded_with: VCR 6.1.0
