--- a/spec/fixtures/vcr_cassettes/MovieFacade/instance_methods/_movie_details/returns_a_movie_object_with_details.yml
+++ b/spec/fixtures/vcr_cassettes/MovieFacade/instance_methods/_movie_details/returns_a_movie_object_with_details.yml
@@ -25,34 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 11 May 2023 02:47:46 GMT
+      - Fri, 12 May 2023 02:27:14 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=22034
+      - public, max-age=24730
       X-Memc:
       - HIT
       X-Memc-Key:
       - c06f0cf1c9d7302f69ad4649ce789846
       X-Memc-Age:
-      - '14250'
+      - '22544'
       X-Memc-Expires:
-      - '8025'
+      - '1728'
       Etag:
-      - W/"6bebc1802fd172c0ad2cde7d76e66f07"
+      - W/"e9851534964b45e4d337d2592ba9e522"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 23241b9c368643949e3bb1a1ba4e97c2.cloudfront.net (CloudFront)
+      - 1.1 c4fb40b7909e4dd897bba2e297b284e6.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - FN3ivA_68wMEPXL1xOans5rB4E2xLiA3WXF61MP_mAIDETddZHeJdg==
+      - nJ2j027EcAgluqBBupv8xIsHGAF8G_qYcZwSrzvfo-7-ptqwTJfu5Q==
+      Age:
+      - '1236'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/kXfqcdQKsToO0OUXHcrrNCHDBzO.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -61,9 +63,9 @@ http_interactions:
         at the Shawshank prison, where he puts his accounting skills to work for an
         amoral warden. During his long stretch in prison, Dufresne comes to be admired
         by the other inmates -- including an older prisoner named Red -- for his integrity
-        and unquenchable sense of hope.","popularity":83.021,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
+        and unquenchable sense of hope.","popularity":88.103,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
-        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.703,"vote_count":23726}'
-  recorded_at: Thu, 11 May 2023 02:47:46 GMT
+        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":23727}'
+  recorded_at: Fri, 12 May 2023 02:47:50 GMT
 recorded_with: VCR 6.1.0
