Modify paths for buttons

--- a/spec/fixtures/vcr_cassettes/Movies_Show_Page/movies_show_page/has_a_button_to_go_back_to_discover_users_page.yml
+++ b/spec/fixtures/vcr_cassettes/Movies_Show_Page/movies_show_page/has_a_button_to_go_back_to_discover_users_page.yml
@@ -46,15 +46,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 9367844cfa8aaebd6a8f032ea2e7d4ec.cloudfront.net (CloudFront)
+      - 1.1 f0b290c4e2273a7586bc6f080031d9bc.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN52-P3
+      - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - VAzsJtHSi5sbqALT9TOjfbrzmdDe5CUwdjIp4Nv3MlkOZ64POh24ZQ==
+      - qmcqHCbLLW1km4YSPmZOy7hBJ_4wPR-wx1_iJDGaGa7zuIwwBBnJ2g==
       Age:
-      - '353'
+      - '10508'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -67,5 +67,5 @@ http_interactions:
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
         offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.713,"vote_count":17887}'
-  recorded_at: Fri, 12 May 2023 13:45:31 GMT
+  recorded_at: Fri, 12 May 2023 16:34:46 GMT
 recorded_with: VCR 6.1.0
