--- a/spec/fixtures/vcr_cassettes/Movies_Show_Page/movies_show_page/lists_a_movies_details.yml
+++ b/spec/fixtures/vcr_cassettes/Movies_Show_Page/movies_show_page/lists_a_movies_details.yml
@@ -25,34 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 12 May 2023 03:17:02 GMT
+      - Fri, 12 May 2023 13:39:38 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=27131
+      - public, max-age=28736
       X-Memc:
       - HIT
       X-Memc-Key:
       - 9d48db5c244b9c3e3d162ef155211175
       X-Memc-Age:
-      - '6753'
+      - '21909'
       X-Memc-Expires:
-      - '17040'
+      - '4943'
       Etag:
-      - W/"6e2229627c2de27dee96121ec990dea8"
+      - W/"ef6ad82e6d0a121226cb60f8ce120bf9"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 8bd27032f0d38908fbe32b696e45c288.cloudfront.net (CloudFront)
+      - 1.1 ce4b35590464ed34415a13badd946eba.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - Fu1zz4zZxl0rwH2vG95CjJyOxN7x1gQmphg6rS_WkEcCg-tzMyQS2A==
+      - 47GmKjNvQZiz2pLUqUqVMsxg6H7SXgo8wv2pzoedPeCX7ekrh2PFLA==
+      Age:
+      - '10508'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -64,6 +66,6 @@ http_interactions:
         of bloody revenge.","popularity":104.485,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.713,"vote_count":17886}'
-  recorded_at: Fri, 12 May 2023 03:17:02 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.713,"vote_count":17887}'
+  recorded_at: Fri, 12 May 2023 16:34:46 GMT
 recorded_with: VCR 6.1.0
