--- a/spec/fixtures/vcr_cassettes/MoviesFacade/class_methods/movie_details.yml
+++ b/spec/fixtures/vcr_cassettes/MoviesFacade/class_methods/movie_details.yml
@@ -44,15 +44,17 @@ http_interactions:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 6fc2d4bdda3d8efb927d086a87e8483e.cloudfront.net (CloudFront)
+      - 1.1 21d788b44c2b3d335a275c07a54548b6.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - nF3qAP3ymrkFsepx1RjObg-7WGNHXdXe90RMRv86wAvOrc1jeqkb-g==
+      - WuXhz0dL-RziQ_Zazz18mkuQfBNnKZMKvdMjHnzjjf7F2xH3Hw3IQQ==
+      Age:
+      - '2279'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/hZkgoQYus5vegHoetLkCJzb17zJ.jpg","belongs_to_collection":null,"budget":63000000,"genres":[{"id":18,"name":"Drama"},{"id":53,"name":"Thriller"},{"id":35,"name":"Comedy"}],"homepage":"http://www.foxmovies.com/movies/fight-club","id":550,"imdb_id":"tt0137523","original_language":"en","original_title":"Fight
@@ -69,5 +71,5 @@ http_interactions:
         Century Fox","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1999-10-15","revenue":100853753,"runtime":139,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Mischief.
         Mayhem. Soap.","title":"Fight Club","video":false,"vote_average":8.4,"vote_count":26374}'
-  recorded_at: Fri, 12 May 2023 19:20:46 GMT
+  recorded_at: Fri, 12 May 2023 19:58:46 GMT
 recorded_with: VCR 6.1.0
