--- a/spec/fixtures/vcr_cassettes/MovieService/class_methods/movies/returns_movie_data.yml
+++ b/spec/fixtures/vcr_cassettes/MovieService/class_methods/movies/returns_movie_data.yml
@@ -27,11 +27,11 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 11 May 2023 22:05:31 GMT
+      - Fri, 12 May 2023 19:02:56 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=26998
+      - public, max-age=28043
       X-Memc:
       - MISS, STORE
       X-Memc-Key:
@@ -39,36 +39,36 @@ http_interactions:
       X-Memc-Age:
       - '0'
       X-Memc-Expires:
-      - '26998'
+      - '28043'
       Etag:
-      - W/"0d11a6ddc1b7bf7535b2800b2bdb193e"
+      - W/"43cc06a8fa25b4c0d72855e509fe617d"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 045f1e1f031241f3808c557a2b5d6b0a.cloudfront.net (CloudFront)
+      - 1.1 5dcf09eaf65257abe85ddc5988a25c4e.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - 0UN6Xy0CUQhMuIoNYDlA_jh5lgQUIMgmTKrlzbVRQFaU4rBT65LXgQ==
+      - a1o3KDzOJ6jTObYlxZyXeMi7dkUIzEfykOulNhMLfOZeDMYZ9YbsPA==
       Age:
-      - '4832'
+      - '4625'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/5SwoNJ5o2dEOdABCHdqM4siMhqt.jpg","genre_ids":[35,18],"id":701189,"original_language":"en","original_title":"Query","overview":"A
         leisurely day belies its uninvited end as Jay and Alex, best friends and roommates,
-        challenge one another on their opinions of sexuality.","popularity":2.797,"poster_path":"/vGTahyg0SX9cejcKj9P14NqXdgg.jpg","release_date":"2020-04-15","title":"Query","video":false,"vote_average":5.0,"vote_count":16},{"adult":false,"backdrop_path":"/oBmgFY9ZMzMfNYfhbsUYvinDpee.jpg","genre_ids":[],"id":1017678,"original_language":"es","original_title":"31
+        challenge one another on their opinions of sexuality.","popularity":2.166,"poster_path":"/vGTahyg0SX9cejcKj9P14NqXdgg.jpg","release_date":"2020-04-15","title":"Query","video":false,"vote_average":5.0,"vote_count":16},{"adult":false,"backdrop_path":"/oBmgFY9ZMzMfNYfhbsUYvinDpee.jpg","genre_ids":[],"id":1017678,"original_language":"es","original_title":"31
         Minutos: Cuarentena 31 y Querido Diario (La Serie Completa)","overview":"The
         star journalist of 31 Minutos, Juan Carlos Bodoque has to lock himself in
-        his house due to the COVID-19 pandemic","popularity":0.624,"poster_path":"/3wEAd6bnz2EAu7Kt2k3e5HOslpx.jpg","release_date":"2021-11-12","title":"31
+        his house due to the COVID-19 pandemic","popularity":0.628,"poster_path":"/3wEAd6bnz2EAu7Kt2k3e5HOslpx.jpg","release_date":"2021-11-12","title":"31
         Minutos: Cuarentena 31 \u0026 Querido Diario (The Complete Series)","video":false,"vote_average":0.0,"vote_count":0},{"adult":false,"backdrop_path":null,"genre_ids":[53,18],"id":426977,"original_language":"en","original_title":"Murder
         in Reverse?","overview":"Tom Masterick, a dock worker, is wrongfully convicted
         of a murder charge. His death sentence is commuted to a long prison term.
-        When released as an old man, he vows to find the real killer.","popularity":1.214,"poster_path":"/fl13KK3qG1ReCChHCU2qyai8oij.jpg","release_date":"1945-10-21","title":"Murder
+        When released as an old man, he vows to find the real killer.","popularity":0.743,"poster_path":"/fl13KK3qG1ReCChHCU2qyai8oij.jpg","release_date":"1945-10-21","title":"Murder
         in Reverse?","video":false,"vote_average":6.0,"vote_count":2}],"total_pages":1,"total_results":3}'
-  recorded_at: Thu, 11 May 2023 23:26:03 GMT
+  recorded_at: Fri, 12 May 2023 20:20:01 GMT
 recorded_with: VCR 6.1.0
