--- a/spec/fixtures/vcr_cassettes/MovieService/class_methods/_movie_details/returns_a_movie_object_with_details.yml
+++ b/spec/fixtures/vcr_cassettes/MovieService/class_methods/_movie_details/returns_a_movie_object_with_details.yml
@@ -25,36 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 12 May 2023 02:27:14 GMT
+      - Fri, 12 May 2023 16:48:19 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=24730
+      - public, max-age=21864
       X-Memc:
       - HIT
       X-Memc-Key:
       - c06f0cf1c9d7302f69ad4649ce789846
       X-Memc-Age:
-      - '22544'
+      - '24966'
       X-Memc-Expires:
-      - '1728'
+      - '2489'
       Etag:
-      - W/"e9851534964b45e4d337d2592ba9e522"
+      - W/"ebb57ae489962c2e7f8cf7fe404deb65"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 8bd27032f0d38908fbe32b696e45c288.cloudfront.net (CloudFront)
+      - 1.1 56a79b3a2ac1e2942686c2337f96fb72.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - 3jW0n6Vec_c72rBjJCTOqXbU_xplc2c7M9uLm8N8D3K7xS1PsUP0nA==
+      - T7zWBebA5AlHu_oUXYdvVi0O4T2lIjj7N3Z1r9UuCBKeodaDWQ706Q==
       Age:
-      - '5577'
+      - '18370'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/kXfqcdQKsToO0OUXHcrrNCHDBzO.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -63,9 +63,9 @@ http_interactions:
         at the Shawshank prison, where he puts his accounting skills to work for an
         amoral warden. During his long stretch in prison, Dufresne comes to be admired
         by the other inmates -- including an older prisoner named Red -- for his integrity
-        and unquenchable sense of hope.","popularity":88.103,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
+        and unquenchable sense of hope.","popularity":120.265,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
-        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":23727}'
-  recorded_at: Fri, 12 May 2023 04:00:11 GMT
+        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.703,"vote_count":23730}'
+  recorded_at: Fri, 12 May 2023 21:54:29 GMT
 recorded_with: VCR 6.1.0
