Final touchups for project

--- a/spec/fixtures/vcr_cassettes/New_Party_Page/as_a_registered_user_when_I_visit_the_new_party_page/I_see_a_form_to_create_a_new_party.yml
+++ b/spec/fixtures/vcr_cassettes/New_Party_Page/as_a_registered_user_when_I_visit_the_new_party_page/I_see_a_form_to_create_a_new_party.yml
@@ -46,15 +46,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 fdb71c154448c5637ac452d623bb2ad6.cloudfront.net (CloudFront)
+      - 1.1 61ea521c913b8f6dbadaa96ecbb825ec.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - 6ewk9_V7QFqVROBTSrYHjIJWc1299fuaFcqIaXOmdxdiKkpFlIpUAQ==
+      - 6xvCB8AZxroUe8H_tmoKjeIMNzK0tge5-802GM510bBdWopaxW-xKg==
       Age:
-      - '18366'
+      - '20795'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/kXfqcdQKsToO0OUXHcrrNCHDBzO.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -67,7 +67,7 @@ http_interactions:
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
         can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.703,"vote_count":23730}'
-  recorded_at: Fri, 12 May 2023 21:54:25 GMT
+  recorded_at: Fri, 12 May 2023 22:34:54 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/278?api_key=27497a269af52c0049ba8bfe885390eb
@@ -114,15 +114,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 acb55e8d2b8ad7df45561a8bccaaa688.cloudfront.net (CloudFront)
+      - 1.1 64544648f8289d0bd61ef02997afb698.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - xbOtUY3pb9xC2VCCfH6XiiyZZ6rL4os0gBbEDfXs6BZXXtE3p1qC-g==
+      - "-7gJB0EQAP4b7urtuZmvQH54adWMrlTMA7GCYuz_zJTOiIXVfiMa9g=="
       Age:
-      - '18366'
+      - '20795'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/kXfqcdQKsToO0OUXHcrrNCHDBzO.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -135,5 +135,5 @@ http_interactions:
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
         can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.703,"vote_count":23730}'
-  recorded_at: Fri, 12 May 2023 21:54:25 GMT
+  recorded_at: Fri, 12 May 2023 22:34:54 GMT
 recorded_with: VCR 6.1.0
