Go fix main branch from accidental merge from partner

--- a/spec/fixtures/vcr_cassettes/users_movies_results_page/discover_page_button/displays_the_Discover_Page_button.yml
+++ b/spec/fixtures/vcr_cassettes/users_movies_results_page/discover_page_button/displays_the_Discover_Page_button.yml
@@ -24,39 +24,37 @@ http_interactions:
       - chunked
       Connection:
       - keep-alive
+      Date:
+      - Mon, 22 May 2023 18:12:21 GMT
       Server:
       - openresty
+      Cache-Control:
+      - public, max-age=22569
       X-Memc:
       - HIT
       X-Memc-Key:
       - 67960ca40061349943292fd524b1c36e
       X-Memc-Age:
-      - '15795'
+      - '12426'
       X-Memc-Expires:
-      - '11828'
-      Date:
-      - Fri, 12 May 2023 20:26:53 GMT
-      Cache-Control:
-      - public, max-age=24455
+      - '14206'
       Etag:
       - W/"0e23279b004381f72a34159d5c7dfd1f"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Hit from cloudfront
+      - Miss from cloudfront
       Via:
-      - 1.1 d148370a131bf3f501366f80f7139d32.cloudfront.net (CloudFront)
+      - 1.1 bd96da9a6020f2a5d5499cedf78d68f2.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DFW57-P2
+      - DEN52-P2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - aJrVcOj_ivU1Z6wt6bydNbz462SZ-Cf4jBPorz7TZ0qIC_tUQiDhUQ==
-      Age:
-      - '134'
+      - zS9tyqQ_XDt7oSA1u4D7jwXpN1vEH3zdU2oXojexcFSuvDtcjKwf0Q==
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
-  recorded_at: Fri, 12 May 2023 20:29:07 GMT
+  recorded_at: Mon, 22 May 2023 18:12:21 GMT
 recorded_with: VCR 6.1.0
