--- a/spec/fixtures/vcr_cassettes/users_movies_results_page/invalid_search/returns_alert_if_a_search_was_invalid.yml
+++ b/spec/fixtures/vcr_cassettes/users_movies_results_page/invalid_search/returns_alert_if_a_search_was_invalid.yml
@@ -24,8 +24,12 @@ http_interactions:
       - chunked
       Connection:
       - keep-alive
+      Date:
+      - Mon, 22 May 2023 18:12:21 GMT
       Server:
       - openresty
+      Cache-Control:
+      - public, max-age=21809
       X-Memc:
       - MISS, STORE
       X-Memc-Key:
@@ -33,30 +37,24 @@ http_interactions:
       X-Memc-Age:
       - '0'
       X-Memc-Expires:
-      - '28216'
-      Date:
-      - Fri, 12 May 2023 20:26:54 GMT
-      Cache-Control:
-      - public, max-age=26635
+      - '21809'
       Etag:
       - W/"0e23279b004381f72a34159d5c7dfd1f"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Hit from cloudfront
+      - Miss from cloudfront
       Via:
-      - 1.1 d1db26791220de32072be1a02183182a.cloudfront.net (CloudFront)
+      - 1.1 f0a2a95cb4d25b2414a9c1a7a754943e.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DFW57-P2
+      - DEN52-P2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - Yg5YfO-E9nbaCrt55cKHfAJCg4oUmN2SA4LevqaMWDmy7iBj2v2zPw==
-      Age:
-      - '134'
+      - 1d5TZU25EPbonR8r7VmmhIyutxnqGOwkyurl772CZgSPymg56fi5hQ==
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
-  recorded_at: Fri, 12 May 2023 20:29:08 GMT
+  recorded_at: Mon, 22 May 2023 18:12:21 GMT
 recorded_with: VCR 6.1.0
