Revert "Auth registration happy"

--- a/spec/fixtures/vcr_cassettes/users_movies_results_page/discover_page_button/displays_the_Discover_Page_button.yml
+++ b/spec/fixtures/vcr_cassettes/users_movies_results_page/discover_page_button/displays_the_Discover_Page_button.yml
@@ -24,37 +24,39 @@ http_interactions:
       - chunked
       Connection:
       - keep-alive
-      Date:
-      - Mon, 22 May 2023 17:49:50 GMT
       Server:
       - openresty
-      Cache-Control:
-      - public, max-age=22569
       X-Memc:
       - HIT
       X-Memc-Key:
       - 67960ca40061349943292fd524b1c36e
       X-Memc-Age:
-      - '12426'
+      - '15795'
       X-Memc-Expires:
-      - '14206'
+      - '11828'
+      Date:
+      - Fri, 12 May 2023 20:26:53 GMT
+      Cache-Control:
+      - public, max-age=24455
       Etag:
       - W/"0e23279b004381f72a34159d5c7dfd1f"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 7803d0a33bb1ff45f063e605070d32b6.cloudfront.net (CloudFront)
+      - 1.1 d148370a131bf3f501366f80f7139d32.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DFW57-P2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - bts63HAeJy5P6GwV6Y_OsvfqqeVm-mYvAoXpUrTnD6SjU4yIEhP1lw==
+      - aJrVcOj_ivU1Z6wt6bydNbz462SZ-Cf4jBPorz7TZ0qIC_tUQiDhUQ==
+      Age:
+      - '134'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
-  recorded_at: Mon, 22 May 2023 17:49:50 GMT
+  recorded_at: Fri, 12 May 2023 20:29:07 GMT
 recorded_with: VCR 6.1.0
