--- a/spec/fixtures/vcr_cassettes/MoviesFacade/get_movie/creates_a_Movie_poro_for_a_single_movie_by_id.yml
+++ b/spec/fixtures/vcr_cassettes/MoviesFacade/get_movie/creates_a_Movie_poro_for_a_single_movie_by_id.yml
@@ -25,48 +25,45 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 12 May 2023 20:29:05 GMT
+      - Tue, 23 May 2023 19:27:57 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=27148
+      - public, max-age=25320
       X-Memc:
       - HIT
       X-Memc-Key:
       - 7209e7920a5695cd4e084e1843260285
       X-Memc-Age:
-      - '16629'
+      - '20393'
       X-Memc-Expires:
-      - '10001'
+      - '5672'
       Etag:
-      - W/"498ba4b2f710b539c4467e2077c23cab"
+      - W/"ef5ae9cfc32be620371a979dd71ae515"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Hit from cloudfront
+      - Miss from cloudfront
       Via:
-      - 1.1 92ab95684f6d9316cfffdbce4bd65794.cloudfront.net (CloudFront)
+      - 1.1 101e65c74403a77668dff4f5ba8c8c8c.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DFW57-P2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - TrlxMaFlYzAmvOzcIqqEcwhbgH4IMUDi5WxrJN0mIe46tVqimCd1sA==
-      Age:
-      - '10465'
+      - 4jPg_uQq5CxodHxnk7Z6ooEHKDT5XWG175Qw2UsE968xL9PvuNVJsA==
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/ww1eIoywghjoMzRLRIcbJLuKnJH.jpg","belongs_to_collection":{"id":403374,"name":"Jack
         Reacher Collection","poster_path":"/qtafXiYDUMKxzsssU41qWey5oiT.jpg","backdrop_path":"/vViRXFnSyGJ2fzMbcc5sqTKswcd.jpg"},"budget":60000000,"genres":[{"id":28,"name":"Action"},{"id":53,"name":"Thriller"}],"homepage":"","id":343611,"imdb_id":"tt3393786","original_language":"en","original_title":"Jack
         Reacher: Never Go Back","overview":"When Major Susan Turner is arrested for
         treason, ex-investigator Jack Reacher undertakes the challenging task to prove
-        her innocence and ends up exposing a shocking conspiracy.","popularity":41.689,"poster_path":"/cOg3UT2NYWHZxp41vpxAnVCOC4M.jpg","production_companies":[{"id":82819,"logo_path":"/zlFa3VNua4hJyGEI4X2sqDrtEH9.png","name":"Skydance
-        Media","origin_country":"US"},{"id":83645,"logo_path":null,"name":"Huahua
+        her innocence and ends up exposing a shocking conspiracy.","popularity":49.389,"poster_path":"/cOg3UT2NYWHZxp41vpxAnVCOC4M.jpg","production_companies":[{"id":82819,"logo_path":"/gXfFl9pRPaoaq14jybEn1pHeldr.png","name":"Skydance","origin_country":"US"},{"id":83645,"logo_path":null,"name":"Huahua
         Media","origin_country":"CN"},{"id":3407,"logo_path":"/iVMjKOFyRvm9PW45lW1wW6TSvnj.png","name":"Shanghai
         Film Group","origin_country":"CN"},{"id":21777,"logo_path":null,"name":"TC
         Productions","origin_country":"US"},{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"}],"production_countries":[{"iso_3166_1":"CN","name":"China"},{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"2016-10-19","revenue":162146076,"runtime":118,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Justice
-        is Coming.","title":"Jack Reacher: Never Go Back","video":false,"vote_average":5.93,"vote_count":4351}'
-  recorded_at: Fri, 12 May 2023 23:23:30 GMT
+        is Coming.","title":"Jack Reacher: Never Go Back","video":false,"vote_average":5.9,"vote_count":4361}'
+  recorded_at: Tue, 23 May 2023 19:27:57 GMT
 recorded_with: VCR 6.1.0
